# mini2

./: .gitignore  CMakeLists.txt  generate_proto.sh  start.sh
clients/: python_client.py
config/: overlay_config.json
machine1/: A_server.cpp  B_server.cpp
machine2/: C_server.cpp  D_server.cpp  E_server.cpp
proto/: data.proto  overlay.proto
shared/: shared_memory.cpp  shared_memory.hpp  vectorized_dataset.h
